--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .search-results .today-card {
-    padding: 20px;
+    padding: 5px;
 }
 
 .today-card img {
@@ -40,12 +40,13 @@ header {
 }
 
 .five-day-display {
-    padding: 10px;
+    padding: 2px;
 }
 
 .five-day-display div {
-    margin: 5px;
+    margin: 2px;
     font-size: .75em;
+    width: 100%;
 }
 
 .five-day-display div h5 {
